--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
     </style>
 </div>
 <script src="flutter_bootstrap.js" async></script>
+<script src="coi-serviceworker.js"></script>
 </body>
 </html>
