--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <meta name="description" content="BlackJack Microchain dApp">
 
     <!-- iOS meta tags & icons -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="BlackJack on Microchain">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
