--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
+    <!-- Linera Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
+
     <title>Blackjack on Microchain</title>
     <link rel="manifest" href="manifest.json">
 </head>
@@ -49,6 +55,8 @@
             width: 220px;
             font-size: 20px;
             text-align: center;
+            font-family: 'Orbitron', sans-serif; /* Use Orbitron, with sans-serif as a fallback */
+            font-weight: 700;
             /* center CSS box */
             margin: auto;
             left: 0;
