--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="BlackJack Microchain dApp">
+    <meta name="description"
+          content="Discover the future of Blackjack with our innovative on-chain gaming platform, built on the secure, fast, and efficient Linera's microchains.">
 
     <!-- iOS meta tags & icons -->
     <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="BlackJack on Microchain">
+    <meta name="apple-mobile-web-app-title" content="BlackJack on Microchains">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
     <!-- Linera Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
-          rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: 'Orbitron';
+            /* src: url('flutter_web_load/black_jack_app/web/fonts/Orbitron-Bold.ttf') format('truetype'); USE THIS PATH FOR TEST PURPOSE*/
+            src: url('fonts/Orbitron-Bold.ttf') format('truetype');
+        }
+    </style>
 
     <title>Blackjack on Microchain</title>
     <link rel="manifest" href="manifest.json">
@@ -55,8 +59,7 @@
             width: 220px;
             font-size: 20px;
             text-align: center;
-            font-family: 'Orbitron', sans-serif; /* Use Orbitron, with sans-serif as a fallback */
-            font-weight: 700;
+            font-family: 'Orbitron', sans-serif;
             /* center CSS box */
             margin: auto;
             left: 0;
