--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
     </style>
 
-    <title>Blackjack on Microchain</title>
+    <title>BlackJack on Microchains</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body style="overflow: hidden"
