--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         }
     </style>
 </div>
-<script src="flutter_bootstrap.js" async></script>
+<script src="flutter_bootstrap.js?v=158" async></script>
 </body>
 </html>
